ajout de la mise à jour et de la suppression de tache

--- a/public_html/views/index.html.twig
+++ b/public_html/views/index.html.twig
@@ -14,11 +14,12 @@
             <input id="id_user" type="hidden" name="id" value="{{ id }}">
             {% endif %}
             <div id="result">
-                <ul>
+                <ul class="list-group mt-3">
                     {% for tache in taches %}
-                        <li>{{ tache.tache }}</li>
+                        <li class="list-group-item d-flex justify-content-between"><div class="task">{{ tache.tache }}</div> <div class="action"><a href="index/update/?id_task={{ tache.id }}" class="editer">Editer</a><a class="delete text-danger" href="index/delete/?id_task={{ tache.id }}&id={{ id }}"> Supprimer</a></div></li>
                     {% endfor %}
                 </ul>
+
             </div>
         </div>
     </div>
