--- a/public_html/views/index.html.twig
+++ b/public_html/views/index.html.twig
@@ -16,7 +16,7 @@
             <div id="result">
                 <ul class="list-group mt-3">
                     {% for tache in taches %}
-                        <li class="list-group-item d-flex justify-content-between"><div class="task">{{ tache.tache }}</div> <div class="action"><a href="index/update/?id_task={{ tache.id }}" class="editer">Editer</a><a class="delete text-danger" href="index/delete/?id_task={{ tache.id }}&id={{ id }}"> Supprimer</a></div></li>
+                        <li class="list-group-item d-flex justify-content-between"><div class="task">{{ tache.tache }}</div> <div class="action"><a class="editer" href="index/update/?id_task={{ tache.id }}" >Editer</a><a class="delete text-danger" href="index/delete/?id_task={{ tache.id }}&id={{ id }}"> Supprimer</a></div></li>
                     {% endfor %}
                 </ul>
 
