--- a/public_html/views/index.html.twig
+++ b/public_html/views/index.html.twig
@@ -5,6 +5,9 @@
     <div class="row">
         <div class="col-md-6 m-auto">
             <h1 class="text-center">Ma todo liste</h1>
+            <div class="text-center text-danger">
+                Pour éditer une tâche il faut cliquer dessus et ensuite cliquer sur éditer
+            </div>
             <div class="text-right mb-3">
                 <button class="btn btn-success btn-add">Ajouter une tâche</button>
             </div>
